just added some styling code

--- a/Main.html
+++ b/Main.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
   </head>
-
+  
 
   <body>
     <nav class = "navbar">
@@ -21,14 +21,22 @@
     <div class="hero" id = "home">
       <div class = "hero__container">
         <h1 class="hero__heading">Schedule</h1>
+        <div class="arrow_left"></div>
+        <div class="arrow_right"></div>
+          
         <table class="Main__Schedule">
-          <th>Sunday</th>
-          <th>Monday</th>
-          <th>Tuesday</th>
-          <th>Wendsday</th>
-          <th>Thursday</th>
-          <th>Friday</th>
-          <th>Saturday</th>
+          <tr>
+            <th>Sunday</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wendsday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+          </tr>
+          <tr>
+            
+          </tr>
         </table>
       </div>
     </div>
